--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dropdown</title>
   </head>
-  <body></body>
+  <body>
+    <div class="dropdown">
+      <h1 class="drop-title">Dropdown Menu</h1>
+      <ul class="drop-list">
+        <li>Option 1</li>
+        <li>Option 2</li>
+        <li>Option 3</li>
+      </ul>
+    </div>
+  </body>
 </html>
