Placeholder content and formatting

--- a/src/template.html
+++ b/src/template.html
@@ -6,13 +6,24 @@
     <title>Dropdown</title>
   </head>
   <body>
-    <div class="dropdown">
-      <h1 class="drop-title">Dropdown Menu</h1>
-      <ul class="drop-list">
-        <li>Option 1</li>
-        <li>Option 2</li>
-        <li>Option 3</li>
-      </ul>
-    </div>
+    <header>
+      <div class="dropdown">
+        <h1 class="drop-title">Dropdown Menu</h1>
+        <ul class="drop-list">
+          <li>Option 1</li>
+          <li>Option 2</li>
+          <li>Option 3</li>
+          <li>Option 4</li>
+          <li>Option 5</li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <p>Quisque viverra urna in lacinia dignissim. Nulla ultrices urna id nibh consequat, eu lacinia augue pharetra. Maecenas iaculis molestie purus laoreet fringilla. Curabitur tincidunt tempus est, vel ullamcorper urna rhoncus eu. Praesent eleifend enim quis diam luctus, in consectetur erat iaculis. Morbi vitae erat efficitur, molestie quam et, consequat ex. Cras in consequat massa, sed molestie dolor. Sed pharetra gravida nunc eu pharetra. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc ornare sagittis metus, vitae consequat orci semper ac. Morbi convallis accumsan justo. Maecenas a quam tempor, varius orci nec, sollicitudin metus. Proin a turpis nec mi pellentesque laoreet sit amet eu nulla. Phasellus ultrices aliquam neque nec tempus.</p>
+      <p>Fusce ultrices non dui id cursus. Morbi nec placerat ante. Donec nunc neque, accumsan id sem ut, porttitor pellentesque orci. Nam dapibus felis dictum, convallis odio in, ultricies nisi. Maecenas et mi vel augue tincidunt ullamcorper. Morbi a magna nec mauris eleifend porttitor. Proin dapibus odio quis purus gravida, vel aliquam enim porttitor. Nullam posuere interdum mauris vitae maximus. Aliquam efficitur mi eu accumsan cursus. Phasellus sit amet vehicula massa, in aliquet neque. Maecenas maximus viverra nunc, in scelerisque ipsum consequat eu.</p>
+      <p>Phasellus vehicula felis id vestibulum finibus. Curabitur euismod porta sapien quis venenatis. Donec purus est, malesuada pulvinar dolor vel, ornare eleifend ex. Etiam ultricies augue vel nisl feugiat, id blandit ante sagittis. Suspendisse potenti. Fusce molestie, odio at iaculis pulvinar, dolor neque lobortis est, ac imperdiet est lorem eget metus. Proin sed auctor dolor, eu condimentum neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras tincidunt risus at odio dignissim congue. Etiam accumsan mauris dui, non bibendum arcu iaculis ac. Morbi vitae bibendum ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse tempus lectus a nibh tempus tempus. Pellentesque commodo ipsum non nisi vulputate rutrum nec non leo. Sed varius leo sed auctor congue.</p>
+      <p>Proin sed suscipit orci, a cursus leo. Aenean a est massa. Curabitur dolor velit, dignissim in nisi non, mollis rutrum erat. Phasellus fermentum posuere magna. Proin leo magna, consequat non imperdiet eget, venenatis in lorem. Aenean sollicitudin, lectus vitae feugiat convallis, massa massa porta sapien, nec pulvinar libero sapien vel erat. Aliquam risus ligula, lacinia nec tincidunt eu, ornare eu velit. Suspendisse condimentum erat tellus, sit amet mattis massa consectetur auctor. Maecenas in neque ac libero convallis tempor. Suspendisse feugiat, velit sit amet hendrerit venenatis, nibh libero eleifend sem, eu semper nisi arcu eget nisi.</p>
+      <p>Suspendisse potenti. Sed dignissim ornare turpis, ac facilisis nibh fermentum sit amet. Praesent ipsum arcu, dignissim vel orci bibendum, pretium pretium elit. Morbi vehicula hendrerit nibh, non finibus erat venenatis eget. Praesent faucibus quam eu orci rhoncus porta. Donec efficitur consectetur lacus at tempus. Duis eget nisl quis tortor volutpat dignissim et id sapien. Integer gravida dolor augue, at egestas leo auctor ac. Nullam commodo venenatis purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean et mollis augue. Aliquam ac purus id neque elementum vestibulum. Nulla sed lobortis ligula, eget maximus massa. Donec molestie maximus justo. Morbi aliquam fermentum turpis sit amet fringilla.</p>
+    </main>
   </body>
 </html>
