--- a/src/template.html
+++ b/src/template.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <div class="dropdown">
-        <h1 class="drop-title">Dropdown Menu</h1>
-        <ul class="drop-list">
+        <h1 class="drop-title" id="dropdown-button">Dropdown Menu</h1>
+        <ul class="drop-list" id="dropdown-list">
           <li>Option 1</li>
           <li>Option 2</li>
           <li>Option 3</li>
